sfdx-source/force-app/main/default/objects/affectlayer__Engagement__c/affectlayer__Engagement__c.object-meta.xml
<CustomObject>
    <label>Engagement</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>