sfdx-source/force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__Account__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>