sfdx-source/force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__ChorusId__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__ChorusId__c</fullName>
    <description>Internal Call ID</description>
    <externalId>true</externalId>
    <label>ChorusId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>