sfdx-source/force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__ContactCount__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__ContactCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is used to stored Contacts Count on Engagement.</description>
    <label>ContactCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>