sfdx-source/force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__Disposition__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Disposition__c</fullName>
    <description>Populate with “No Show” for</description>
    <label>Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>