sfdx-source/force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__EngagementId__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__EngagementId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id</label>
    <type>Text</type>
</CustomField>