sfdx-source/force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__EngagingQuestions__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__EngagingQuestions__c</fullName>
    <description>count</description>
    <label>Engaging Questions</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>