sfdx-source/force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__FillerWords__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__FillerWords__c</fullName>
    <description>avg per min</description>
    <label>Filler Words</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>