sfdx-source/force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__Language__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Language__c</fullName>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>