sfdx-source/force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__MaxMonologue__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__MaxMonologue__c</fullName>
    <description>seconds</description>
    <label>Max Monologue</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>