sfdx-source/force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>