sfdx-source/force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__Patience__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Patience__c</fullName>
    <description>seconds</description>
    <label>Patience</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>