sfdx-source/force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__RepTalkRatio__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__RepTalkRatio__c</fullName>
    <label>RepTalkRatio</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>