sfdx-source/force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__SlideTime__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__SlideTime__c</fullName>
    <label>Slide Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>