sfdx-source/force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__Stage__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Stage__c</fullName>
    <description>stage as of the time of call (lookup to OpportunityStage)</description>
    <label>Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>