sfdx-source/force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__TalkSpeed__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__TalkSpeed__c</fullName>
    <description>words per min</description>
    <label>Talk Speed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>