sfdx-source/force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__Transcript__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Transcript__c</fullName>
    <description>If above character limit, truncate</description>
    <label>Transcript</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>