sfdx-source/force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__URL__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__URL__c</fullName>
    <description>Recording URL</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>