sfdx-source/force-app/main/default/objects/affectlayer__Engagement__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-16059: It stores Contact associated with the Chorus Meeting.</description>
    <inlineHelpText>Contact associated with the Chorus Meeting</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>