sfdx-source/force-app/main/default/objects/affectlayer__Engagement__c/validationRules/Restrict_Engagement_Name_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Engagement_Name_Field</fullName>
    <active>true</active>
    <description>LEM-16059:It is used to restrict user to update on Engagement Name field as it should auto populate through Chorus Integration User</description>
    <errorConditionFormula>AND(
    NOT($Permission.Bypass_Engagement_Validation_Rules),
    ISCHANGED(Name)
)</errorConditionFormula>
    <errorMessage>You can&apos;t edit Name after creation of Engagement Record</errorMessage>
</ValidationRule>