sfdx-source/force-app/main/default/objects/affectlayer__Engagement__c/listViews/affectlayer__All.listView-meta.xml
<ListView>
    <fullName>affectlayer__All</fullName>
    <columns>NAME</columns>
    <columns>affectlayer__ChorusId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>affectlayer__EngagementId__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>affectlayer__URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>